--- a/front-end/webapp/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -236,9 +236,9 @@
 				</mat-form-field>
 
 				<div fxLayout="column">
-					<span [translate]="'Cobertura Medica'"></span>
+					<span [translate]="'pacientes.form.MEDICAL_COVERAGE'"></span>
 					<button mat-stroked-button color="primary" type="button" (click)="openMedicalCoverageDialog()" class="medical-coverage">
-						<span [translate]="'Actualizar cobertura'"></span>
+						<span [translate]="'pacientes.form.UPDATE_MEDICAL_COVERAGE'"></span>
 					</button>
 				</div>
 
