tg-2273 crea componente nueva-consulta-dock-popup

--- a/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.html
@@ -8,7 +8,7 @@
 		</button>
 	</div>
 
-	<div class="content" *ngIf="!overlayRef.isMinimized()">
+	<div class="content" *ngIf="!dockPopupRef.isMinimized()">
 		<ng-content></ng-content>
 	</div>
 </div>
