--- a/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.scss
@@ -1,9 +1,34 @@
-.header {
-	justify-content: flex-end;
-	background-color: gray;
+.action-bar {
+	max-height: 10vh;
+	padding: 0 2vw;
+
+	font-weight: 500;
+	color: white;
+
+	.title {
+		font-size: large;
+	}
+
+	button {
+		mat-icon {
+			font-size: x-large;
+		}
+	}
 }
 
 .content {
-	max-height: 70vh;
-	padding: 10px;
+	max-height: 60vh;
+
+	.body {
+		max-height: 50vh;
+		padding: 35px 30px;
+		overflow-y: auto
+	}
+
+	.actions {
+		justify-content: flex-end;
+		margin-right: 2vw;
+		margin-bottom: 2vh;
+	}
 }
+
