--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -7,3 +7,26 @@
 ::ng-deep .cdk-overlay-pane.overlay-class {
 	background-color: white;
 }
+
+mat-form-field {
+	width: 100%;
+}
+
+.margin-checkbox {
+	margin-bottom: 15px;
+}
+
+.signos-vitales-field {
+	.mat-form-field {
+		width: 95%;
+		::ng-deep .mat-form-field-wrapper {
+			padding-bottom: 0;
+		}
+		margin-bottom: -5px;
+	}
+	margin-bottom: 10px;
+}
+
+.margin-bottom {
+	margin-bottom: 3vh;
+}
