--- a/front-end/webapp/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.scss
+++ b/front-end/webapp/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.scss
@@ -15,10 +15,14 @@
 	}
 }
 
-.valid-date{
-	align-self: center;
-}
-
 .spinner {
 	@include centered-spinner;
+}
+
+.coverages{
+	margin: 0.3vh;
+}
+
+.medical-coverage-name{
+	font-weight: 500;
 }
