--- a/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-container" fxLayout="row wrap">
-	<ng-container *ngFor="let img of images">
+	<ng-container *ngFor="let img of footerImages">
 		<img src="{{img.location}}" alt="{{img.alt}}">
 	</ng-container>
 </div>
