tg-2278 [FE] Modificar pantalla de mapa de camas para agrupar según sector

--- a/front-end/webapp/src/app/modules/institucion/components/bed-mapping/bed-mapping.component.scss
+++ b/front-end/webapp/src/app/modules/institucion/components/bed-mapping/bed-mapping.component.scss
@@ -16,8 +16,16 @@
     margin: 10px 0px 10px 0px;
 }
 
-#speciality-title {
-    margin: 0px;
+.sector-characteristic-block {
+	margin-bottom: 10px;
+}
+
+.sector-characteristic-label {
+	margin: 0px;
+}
+
+.speciality-label {
+	margin-right: 10px;
 }
 
 #speciality-block {
