--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -10,7 +10,7 @@
 					<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
 							id="nueva_consulta"
 							mat-flat-button color="primary"
-							(click)="goToNuevaConsulta()">
+							(click)="openNuevaConsulta()">
 						{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}
 					</button>
 				</ng-container>
@@ -51,4 +51,5 @@
 			</mat-card-content>
 		</mat-card>
 	</section>
+
 </app-content>
