tg-2339 [FE] Modificar resumen de internación de paciente para no ver especialidad de cama

--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
@@ -16,9 +16,7 @@
 			<span class="mat-body-2">{{ internmentEpisode?.roomNumber }}</span>
 			<mat-icon color="primary" mat-list-icon [inline]="true">single_bed</mat-icon>
 			<span class="mat-body-2">{{ internmentEpisode?.bedNumber }} </span>
-			<span class="mat-body-2">
-				{{ internmentEpisode?.sectorDescription}} - {{ internmentEpisode?.sectorSpecialtyName }}
-			</span>
+			<span class="mat-body-2">{{ internmentEpisode?.sectorDescription}}</span>
 		</div>
 	</mat-list-item>
 
