--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -44,7 +44,8 @@
 							<span>{{ 'ambulatoria.paciente.problemas.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
 						<ng-template matTabContent>
-							<app-problemas [hasNewConsultationEnabled]="hasNewConsultationEnabled"></app-problemas>
+							<app-problemas [hasNewConsultationEnabled]="hasNewConsultationEnabled"
+										   [nuevaConsultaRef]="dialogRef"></app-problemas>
 						</ng-template>
 					</mat-tab>
 				</mat-tab-group>
