--- a/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
@@ -44,7 +44,7 @@
 							</div>
 							<mat-form-field appearance="outline">
 								<mat-label translate="turnos.new-appointment.PATIENT_ID"></mat-label>
-								<input matInput type="text" id="patientId" name="patientId" formControlName="patientId">
+								<input matInput type="number" id="patientId" name="patientId" formControlName="patientId">
 							</mat-form-field>
 						</div>
 						<div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="10px">
