tg-2361 agrega estilos responsive en nueva consulta ambulatoria

--- a/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="column" style="background-color: white">
-	<div fxLayout="row" fxFlex="100%" fxLayoutAlign="space-between center"
+<div class="dock-popup" fxLayout="column" style="background-color: white">
+	<div fxLayout="row" fxLayoutAlign="space-between center"
 		 class="background-color-primary action-bar"
 		 (click)="toggle(); $event.stopPropagation()">
 		<div id="title" class="mat-body-1 title">
