--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -4,7 +4,7 @@
 	}
 }
 
-::ng-deep .cdk-overlay-pane.overlay-class {
+::ng-deep .cdk-overlay-pane.dock-popup-overlay {
 	background-color: white;
 }
 
