--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -358,8 +358,8 @@
 				<app-document-section class="margin-bottom"
 									  [sectionTitle]="'ambulatoria.paciente.nueva-consulta.signos-vitales.TITLE'">
 					<ng-container concept-form>
-						<form [formGroup]="signosVitalesNuevaConsultaService.getForm()">
-							<div fxLayout=row fxLayout.lt-lg="column">
+						<form fxLayout="column" fxLayoutGap="10px" [formGroup]="signosVitalesNuevaConsultaService.getForm()">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayoutGap="5px" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="heartRate">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.HEART_RATE'"></mat-label>
@@ -394,7 +394,7 @@
 								</div>
 							</div>
 
-							<div fxLayout=row fxLayout.lt-lg="column">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="temperature">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.TEMPERATURE'"></mat-label>
@@ -429,7 +429,7 @@
 								</div>
 							</div>
 
-							<div fxLayout=row fxLayout.lt-lg="column">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
 								<div class="signos-vitales-field" formGroupName="systolicBloodPressure">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.SYSTOLIC_BLOOD_PRESSURE'"></mat-label>
