--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -17,8 +17,10 @@ mat-form-field {
 }
 
 .signos-vitales-field {
+	display: flex;
+	flex-direction: column;
 	.mat-form-field {
-		width: 95%;
+		width: 50%;
 		::ng-deep .mat-form-field-wrapper {
 			padding-bottom: 0;
 		}
