tg-2423 [FIX] Error 403 al asignar turno con adm. de agenda y edicion de telefono y cambio de estado en turno

--- a/front-end/webapp/src/app/modules/turnos/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/agenda/agenda.component.html
@@ -67,7 +67,7 @@
 									[hourSegments]="hourSegments"
 									[weekStartsOn]="MONDAY"
 									(beforeViewRender)="loadCalendar($event)"
-									(hourSegmentClicked)="onClickedSegment($event)"
+									(hourSegmentClicked)="hasRoleToCreate ? onClickedSegment($event) : null"
 									(eventClicked)="viewAppointment($event.event)"
 			>
 			</mwl-calendar-week-view>
@@ -80,7 +80,7 @@
 								   [hourSegmentTemplate]="hourSegmentTemplate"
 								   [dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
 								   (beforeViewRender)="loadCalendar($event)"
-								   (hourSegmentClicked)="onClickedSegment($event)"
+								   (hourSegmentClicked)="hasRoleToCreate ? onClickedSegment($event) : null"
 								   (eventClicked)="viewAppointment($event.event)"
 			>
 			</mwl-calendar-day-view>
