--- a/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -4,7 +4,8 @@
 			<div fxLayout="row" fxLayoutGap="3px" fxLayoutAlign="start center">
 				<mat-icon fontSet="material-icons-outlined" color="primary">person</mat-icon>
 				<span class="mat-body-strong">ID del paciente: {{appointmentData.patient.id}}</span>
-				<span class="mat-body-strong" *ngIf="appointmentData?.patient.typeId === TEMPORARY_PATIENT"> - Temporal</span>
+				<span class="mat-body-strong" *ngIf="appointmentData?.patient.typeId === TEMPORARY_PATIENT"> -
+					Temporal</span>
 				<span></span>
 			</div>
 			<div *ngIf="appointmentData.patient.fullName || appointmentData.patient.identificationNumber" fxLayout="row"
@@ -25,15 +26,21 @@
 			</div>
 			<div fxLayout="row" fxLayoutGap="3px" fxLayoutAlign="start center" class="mat-body patient-info">
 				<mat-icon fontSet="material-icons-outlined" style="color: transparent">person</mat-icon>
-				<app-editable-field [fieldName]="'turnos.appointment.phoneNumber.PHONE_NUMBER'"
-						[value]="appointmentData.phoneNumber"
-						(newValueEmitted)="updatePhoneNumber($event)"></app-editable-field>
+				<app-editable-field *ngIf="( hasRoleToEditPhoneNumber$ | async ) else notEditablePhone"
+					[fieldName]="'turnos.appointment.phoneNumber.PHONE_NUMBER'" [value]="appointmentData.phoneNumber"
+					(newValueEmitted)="updatePhoneNumber($event)"></app-editable-field>
+				<ng-template #notEditablePhone>
+					<div>
+						<span [translate]="'turnos.appointment.phoneNumber.PHONE_NUMBER'"></span>:
+						<span>{{appointmentData.phoneNumber}}</span>
+					</div>
+				</ng-template>
 			</div>
 			<div fxLayout="row" fxLayoutGap="3px" fxLayoutAlign="start center">
 				<mat-icon fontSet="material-icons-outlined" style="color: transparent">person</mat-icon>
 				<a class="mat-body" *hasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO']"
-				[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + appointmentData?.patient?.id"
-				(click)="closeDialog()">Ver historia clínica</a>
+					[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + appointmentData?.patient?.id"
+					(click)="closeDialog()">Ver historia clínica</a>
 			</div>
 		</section>
 
@@ -59,14 +66,14 @@
 			<span class="mat-body-strong">Estado de turno</span>
 			<div class="appointment-actions" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
 
-				<button type="button"
+				<button type="button" [disabled]="!(hasRoleToChangeState$ | async)"
 					[ngClass]="{'selected assigned': estadoSelected === appointmentStatesIds.ASSIGNED }"
 					(click)="onClickedState(appointmentStatesIds.ASSIGNED)" mat-stroked-button>
 					<mat-icon matTooltip="{{getAppointmentState(appointmentStatesIds.ASSIGNED).description}}"
 						color="primary">event_available</mat-icon>
 				</button>
 
-				<button type="button"
+				<button type="button" [disabled]="!(hasRoleToChangeState$ | async)"
 					[ngClass]="{'selected confirmed': estadoSelected === appointmentStatesIds.CONFIRMED }"
 					(click)="onClickedState(appointmentStatesIds.CONFIRMED)" mat-stroked-button>
 					<mat-icon matTooltip="{{getAppointmentState(appointmentStatesIds.CONFIRMED).description}}"
@@ -75,7 +82,8 @@
 				</button>
 
 				<button type="button" [ngClass]="{'selected absent': estadoSelected === appointmentStatesIds.ABSENT }"
-					(click)="onClickedState(appointmentStatesIds.ABSENT)" mat-stroked-button>
+					(click)="onClickedState(appointmentStatesIds.ABSENT)" mat-stroked-button
+					[disabled]="!(hasRoleToChangeState$ | async)">
 					<mat-icon matTooltip="{{getAppointmentState(appointmentStatesIds.ABSENT).description}}"
 						color="primary" svgIcon="person_cancel_outlined">
 					</mat-icon>
