tg-2477 fix boton nueva consulta sigue viendose luego de confirmarla
(cherry picked from commit ed9b17b39881e896da10bceb2643a95638fcf913)

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -44,7 +44,7 @@
 							<span>{{ 'ambulatoria.paciente.problemas.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
 						<ng-template matTabContent>
-							<app-problemas [hasNewConsultationEnabled]="hasNewConsultationEnabled"
+							<app-problemas [(hasNewConsultationEnabled)]="hasNewConsultationEnabled"
 										   [nuevaConsultaRef]="dialogRef"></app-problemas>
 						</ng-template>
 					</mat-tab>
