tg-2477 fix boton nueva consulta no se ve cuando está la propiedad activada
(cherry picked from commit af52df35ba623d3e813c944975b69971942062a9)

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -24,7 +24,7 @@
 									<mat-icon>more_vert</mat-icon>
 								</button>
 								<mat-menu #menu="matMenu">
-									<button *ngIf="hasNewConsultationEnabled" mat-menu-item (click)="openNuevaConsulta(problem)">
+									<button *ngIf="hasNewConsultationEnabled$ | async" mat-menu-item (click)="openNuevaConsulta(problem)">
 										<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"></span>
 									</button>
 									<button mat-menu-item (click)="solveProblemPopUp(problem)">
@@ -56,7 +56,8 @@
 									<mat-icon>more_vert</mat-icon>
 								</button>
 								<mat-menu #menu="matMenu">
-									<button *ngIf="hasNewConsultationEnabled" mat-menu-item (click)="openNuevaConsulta(problem)">
+									<button *ngIf="hasNewConsultationEnabled$ | async" mat-menu-item
+											(click)="openNuevaConsulta(problem)">
 										<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"></span>
 									</button>
 									<button mat-menu-item (click)="solveProblemPopUp(problem)">
