tg-2479 nuevo logo secundario en header - PBA
(cherry picked from commit 73dc58ac92225bc31518edf3dfcbc78bafa06ad3)

--- a/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar [style.position]="position">
 	<mat-toolbar-row class="mat-elevation-z6">
 		<ng-content></ng-content>
-		<div class="">
+		<div class="logo-container">
 			<app-logo></app-logo>
+			<app-logo *featureFlag="'habilitarSecondaryHeaderLogo'" [isSecondaryLogo]="true"></app-logo>
 		</div>
 	</mat-toolbar-row>
 </mat-toolbar>
