--- a/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.scss
@@ -1,6 +1,14 @@
 mat-toolbar {
 	background-color: white;
 	z-index: 2;
+
+	.logo-container {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+	}
+
 	img {
 		max-width: 100%;
 		height: 80%;
