tg-2478 [P2] Fix Cambiar mensaje cuando no se encuentra agendas de un profesional + especialización

--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.scss
@@ -10,7 +10,7 @@ span {
 	font-size: $font-size-sm;
 	white-space: pre;
 }
-
+noAgendaForProfessionalAndSpecialty
 mat-icon.mat-icon-inline {
 	font-size: $font-size-lg;
 }
