tg-2486. Diseñar endpoints requeridos

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -47,6 +47,17 @@
 							<app-problemas [nuevaConsultaRef]="dialogRef"></app-problemas>
 						</ng-template>
 					</mat-tab>
+					<mat-tab id="tab_ordenes_prescripciones" *ngIf=false>
+						<ng-template mat-tab-label>
+							<mat-icon>content_paste</mat-icon>
+							<span>{{ 'ambulatoria.paciente.ordenes_prescripciones.TAB_LABEL' | translate | uppercase }}</span>
+						</ng-template>
+						<ng-template matTabContent>
+							<button mat-flat-button color="primary" routerLink="./ordenes" fxFlexFill.xs>
+								<span class="uppercase">Ordenes</span>
+							</button>			
+						</ng-template>
+					</mat-tab>
 				</mat-tab-group>
 			</mat-card-content>
 		</mat-card>
