tg-2496. [Bug] Documento de anamnesis no se guarda en la base

--- a/back-end/hospital-api/src/main/resources/templates/fragments/author.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/author.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <html lang="es">
-    <div class="container" th:fragment="author (firstName, lastName, licenseNumber)" style="text-align:right">
+    <div th:fragment="author (firstName, lastName, licenseNumber)" style="text-align:right">
         <br/><br/><strong>Profesional: </strong><label class="center-padding" th:text="${lastName + ' '}"></label><label th:text="${firstName}"></label>
         <p><strong>Matricula: </strong><label class="center-padding" th:text="${licenseNumber}"></label></p>
     </div>
