--- a/back-end/hospital-api/src/main/resources/templates/fragments/footer.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <html lang="es">
 	<div class="container" th:fragment="footer">
 		<div class="row" >
