--- a/back-end/hospital-api/src/main/resources/templates/fragments/general.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/general.html
@@ -389,8 +389,7 @@
     </div>
 </body>
 <footer class="footer-dark" th:fragment="footer" th:if="${author != null}">
-    <div th:replace="fragments/author.html
-	:: author(firstName=${author.firstName}, lastName=${author.lastName},licenseNumber=${author.licence})">
+    <div th:replace="fragments/author.html :: author(firstName=${author.firstName}, lastName=${author.lastName},licenseNumber=${author.licence})">
     </div>
 </footer>
 </html>
