--- a/back-end/hospital-api/src/main/resources/templates/fragments/header.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <html lang="es">
 	<body>
 		<div class="row templateHeader headercolor" th:fragment="header">
