tg-2535 [FE] Agrega encabezados de Cards en ordenes

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -56,6 +56,7 @@
 							<button mat-flat-button color="primary" routerLink="./ordenes" fxFlexFill.xs>
 								<span class="uppercase">Ordenes</span>
 							</button>
+							<app-ordenes></app-ordenes>
 						</ng-template>
 					</mat-tab>
 				</mat-tab-group>
