tg-1122 [HCE internación]-Quitar títulos de columnas en cards de internacion cuando la misma tiene una única columna

--- a/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
@@ -26,8 +26,9 @@
 				</ng-template>
 			</td>
 		</ng-container>
-
-		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<div *ngIf="showTableHeader">
+			<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		</div>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 	</table>
 	<mat-paginator *ngIf="(paginationEnabled) && (dataSource?.data?.length !== 0)"
