tg-2508 modals para agregar preinscripciones

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -47,7 +47,7 @@
 							<app-problemas [nuevaConsultaRef]="dialogRef"></app-problemas>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_ordenes_prescripciones" *ngIf=false>
+					<mat-tab id="tab_ordenes_prescripciones" *ngIf=true>
 						<ng-template mat-tab-label>
 							<mat-icon>content_paste</mat-icon>
 							<span>{{ 'ambulatoria.paciente.ordenes_prescripciones.TAB_LABEL' | translate | uppercase }}</span>
@@ -56,6 +56,9 @@
 							<button mat-flat-button color="primary" routerLink="./ordenes" fxFlexFill.xs>
 								<span class="uppercase">Ordenes</span>
 							</button>
+							<button mat-flat-button color="primary" (click)="openDialog()" fxFlexFill.xs>
+								<span class="uppercase">Agregar medicacion</span>
+							</button>		
 							<app-ordenes></app-ordenes>
 						</ng-template>
 					</mat-tab>
